# metrology-inspection-uncertainty

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
reports/: interpretation.md  metrics_table.csv  summary_eval.md
scripts/: aggregate_metrics.py  fix_cli_lines.py  patch_torch_load.py  plot_metrics.py  run_all_categories.ps1
src/metinspect/: cli.py  config.py  image_io.py  metrics.py  viz.py
src/metinspect/data/: mvtec.py
src/metinspect/models/: patchcore.py
tests/: test_cli.py  test_mvtec_validator.py
